# CPPUserManagementClient

./: CMakeLists.txt  LICENSE  README.md  run.bat
assets/: account.parquet  admin.parquet  temp_users.parquet  user-data.parquet  user_info.csv  userdata.parquet  users.csv  users.parquet  userstatus.csv  userstatus.parquet
include/: Admin.h  Backend.h  Client.h  DbUtils.h  Encrypt.h  JsonUtils.h  Menus.h  README  User.h  UserStatus.h  transaction_utils.h
include/arrow/util/: config.h  hashing.h  logging.h
include/librdkafka/: rdkafka.h  rdkafkacpp.h
include/parquet/: parquet_version.h
lib/: README
lib/GUDPRINT/: gud_print.cpp  gud_print.h
src/: Admin.cpp  Backend.cpp  Client.cpp  DbUtils.cpp  Encrypt.cpp  JsonUtils.cpp  Menus.cpp  OTP.cpp  OTP1.cpp  User.cpp  UserStatus.cpp  main.cpp
